ingestion-edge/tests/load/kube/emulator.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name emulator
  labels: &labels
    name: *name
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      - name: *name
        image: google/cloud-sdk:latest
        command:
        # TODO create topic "projects/{project}/topics/{topic}"
        - gcloud
        - beta
        - emulators
        - pubsub
        - start
        env:
        - name: PUBSUB_EMULATOR_HOST
          value: 0.0.0.0:8000
        ports:
        - name: grpc
          containerPort: 8000
          protocol: TCP
      nodeSelector: *labels
