ingestion-edge/tests/load/kube/generator.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name generator
  labels: &labels
    name: *name
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      - name: *name
        image: '{image}'
        command:
        - wrk
        - --connections=10000
        - --threads=10
        - --duration=1h
        - --script={script}
        - {server_uri}
      nodeSelector: *labels
