ingestion-edge/tests/load/kube/server.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: &name server
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
spec:
  tls:
  - secretName: *name
  backend:
    serviceName: *name
    servicePort: http
